--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,4 +16,5 @@ steps:
     npm install -g @angular/cli
     npm install
     ng build --prod
+    npm run deploy
   displayName: 'npm install and build'
